# meta-conf

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.txt
src/: BUILD.bazel
src/examples/: BUILD.bazel  example.proto  kubernetes.json  kubernetes_example.py  proto_example.py  simple_example.py
src/lib/: BUILD.bazel  decorators.py  protobuf.py  pydantic.py  var_stack.py
