"""Bazel module for meta_conf project."""

module(
    name = "meta_conf",
    version = "1.0.0",
)
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "openapi_tools_generator_bazel", version = "0.2.3")

openapi_gen = use_extension("@openapi_tools_generator_bazel//:extension.bzl", "openapi_gen")
openapi_gen.client() 
use_repo(openapi_gen, "openapi_tools_generator_bazel_cli")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_deps")